--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "node-fetch": "^2.6.1",
-    "osm-geojson": "^0.8.4"
+    "osm-geojson": "^0.8.4",
+    "osmtogeojson": "^3.0.0-beta.4"
   }
 }
